--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "cistercian-numerals",
   "version": "1.0.0",
-  "description": "",
+  "description": "A collection of web components to display cistercian numerals",
   "main": "index.js",
+  "author": "Hubert Sablonnière",
+  "license": "MIT",
   "scripts": {
     "start:dev": "wds --node-resolve -w"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "lit": "^2.0.0-pre.1"
+  },
   "devDependencies": {
     "@web/dev-server": "^0.1.7"
-  },
-  "dependencies": {
-    "lit-element": "^2.4.0"
   }
 }
