add repository to package.json
so that there will be a link back to the source (github) from https://www.npmjs.com/package/cistercian-numerals

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A collection of web components to display cistercian numerals",
   "main": "dist/cistercian-numerals.js",
   "author": "Hubert Sablonnière",
+  "repository": "github:hsablonniere/cistercian-numerals",
   "license": "MIT",
   "files": [
     "src",
